[package]
name = "rtvwap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
async-trait = "0.1.57"
url = "2.3.1"
futures-util = "0.3.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"